src/examples/invalid/static/undeclared-variable-if.ra
func main(): void {
  if (a < 2) {
    print(2);
  }
}
